--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -2,9 +2,9 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,7 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+    - uses: actions/setup-go@v3
+      with:
+         go-version: '>=1.18' # The Go version to download (if necessary) and use.
+    - run: go version
     - name: Install dependencies
       run: make
       
