--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Makefile CI
+name: make test
 
 on:
   push:
@@ -17,27 +17,7 @@ jobs:
       with:
          go-version: '>=1.18' # The Go version to download (if necessary) and use.
     - run: go version
-    - name: Get OS and arch info
-      run: |
-          GOOSARCH=${{matrix.goosarch}}
-          GOOS=${GOOSARCH%/*}
-          GOARCH=${GOOSARCH#*/}
-          BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
-          echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
-          echo "GOOS=$GOOS" >> $GITHUB_ENV
-          echo "GOARCH=$GOARCH" >> $GITHUB_ENV
-    - name: build bin
-      run: |
-          go build -o "$BINARY_NAME" -v
-      
-    - name: Release Notes
-      run:
-          git log $(git describe HEAD~ --tags --abbrev=0)..HEAD --pretty='format:* %h %s%n  * %an <%ae>' --no-merges >> ".github/RELEASE-TEMPLATE.md"
-    - name: Release with Notes
-      uses: softprops/action-gh-release@v1
-      with:
-          body_path: ".github/RELEASE-TEMPLATE.md"
-          draft: true
-          files: ${{env.BINARY_NAME}}
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: make
+      run: 
+          make
+
