--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -28,8 +28,7 @@ jobs:
           echo "GOARCH=$GOARCH" >> $GITHUB_ENV
     - name: build bin
       run: |
-          go build -o "$BINARY_NAME" -v
-      
+          go build -o "$BINARY_NAME" cmd/main.go      
     - name: Release Notes
       run:
           git log $(git describe HEAD~ --tags --abbrev=0)..HEAD --pretty='format:* %h %s%n  * %an <%ae>' --no-merges >> ".github/RELEASE-TEMPLATE.md"
