--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,10 +1,9 @@
-name: Makefile CI
+name: release ci
 
-on:
+on:  
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - '*'
 
 jobs:
   build:
