--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,23 +1,60 @@
-name: release ci
-
-on:  
+on:
   push:
+    # Sequence of patterns matched against refs/tags
     tags:
-      - '*'
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+
+name: Latest Release
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  lint:
+    name: Lint files
+    runs-on: 'ubuntu-latest'
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-go@v3
-      with:
-         go-version: '1.13' # The Go version to download (if necessary) and use.
-    - run: go version
-    - name: Get OS and arch info
-      run: |
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.3'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2.5.2
+        with:
+          version: latest
+  test:
+    name: Run tests
+    runs-on: 'ubuntu-latest'
+    needs: lint
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.3'
+      - run: go test -v -cover
+  release:
+    name: Create Release
+    runs-on: 'ubuntu-latest'
+    needs: test
+    strategy:
+      matrix:
+        # List of GOOS and GOARCH pairs from `go tool dist list`
+        goosarch:
+          - 'linux/x64'
+          - 'windows/x64'
+          - 'linux/arm32'
+          - 'linux/arm64'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.3'
+      - name: Get OS and arch info
+        run: |
           GOOSARCH=${{matrix.goosarch}}
           GOOS=${GOOSARCH%/*}
           GOARCH=${GOOSARCH#*/}
@@ -25,18 +62,18 @@ jobs:
           echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
           echo "GOOS=$GOOS" >> $GITHUB_ENV
           echo "GOARCH=$GOARCH" >> $GITHUB_ENV
-    - name: build bin
-      run: |
-          go build -o "$BINARY_NAME" cmd/main.go      
-    - name: Release Notes
-      run:
+      - name: Build
+        run: |
+          go build -o "$BINARY_NAME" cmd/main.go
+      - name: Release Notes
+        run:
           git log $(git describe HEAD~ --tags --abbrev=0)..HEAD --pretty='format:* %h %s%n  * %an <%ae>' --no-merges >> ".github/RELEASE-TEMPLATE.md"
-    - name: Release with Notes
-      uses: softprops/action-gh-release@v1
-      with:
+      - name: Release with Notes
+        uses: softprops/action-gh-release@v1
+        with:
           body_path: ".github/RELEASE-TEMPLATE.md"
           draft: true
           files: ${{env.BINARY_NAME}}
-      env:
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
