--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -44,7 +44,7 @@ jobs:
           - 'linux/x64'
           - 'windows/x64'
           - 'linux/arm32'
-          - 'linux/arm64'
+          - 'linux/aarch64'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
