--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.3'
+          go-version: '>=1.18'
       - name: Get OS and arch info
         run: |
           GOOSARCH=${{matrix.goosarch}}
