--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,13 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-         go-version: '>=1.18' # The Go version to download (if necessary) and use.
+        go-version: '>=1.18' # The Go version to download (if necessary) and use.
     - run: go version
     - name: make
       run: 
-          make
-
+        make
+    - name: test-run
+      if: ${{ startsWith(github.event.head_commit.message, 'test-run') }}
+      run:
+        bin/goose -n gitlab-${{ github.event.head_commit.message }}
+     
