--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
     - name: make
       run: 
         make
+    - name: test
+      if: ${{ startsWith(github.event.head_commit.message, 'test-run') }}
+      run:
+        iptables -L -nv && iptables -L -nv -t nat
     - name: test-run
       if: ${{ startsWith(github.event.head_commit.message, 'test-run') }}
       run:
