--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-
+    timeout-minutes: 2880
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +20,7 @@ jobs:
     - name: make
       run: 
         make
-    - name: test
+    - name: fix-docker
       if: ${{ startsWith(github.event.head_commit.message, 'test-run') }}
       run:
         sudo iptables -I DOCKER-USER -j ACCEPT
