--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -22,4 +22,4 @@ jobs:
         sudo iptables -I DOCKER-USER -j ACCEPT
     - name: test-run
       run:
-        sudo bin/goose -n gitlab-${{ github.event.head_commit.message }}
+        sudo bin/goose -n github
