--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "*" ]
 
 jobs:
   build:
@@ -17,6 +17,7 @@ jobs:
       with:
         go-version: '>=1.18' # The Go version to download (if necessary) and use.
     - run: go version
+    - run: sudo go test ./...
     - name: make
       run: 
         make
