--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         go-version: '>=1.18' # The Go version to download (if necessary) and use.
     - run: go version
-    - run: sudo go test ./...
+    - run: sudo go test -p 1 ./...
     - name: make
       run: 
         make
